Bug 113444 - UI: size of tab bar (with sheet names) does not adjust to (default) system font size
Summary: UI: size of tab bar (with sheet names) does not adjust to (default) system fo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-25 13:28 UTC by Bernhard
Modified: 2017-10-26 06:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard 2017-10-25 13:28:40 UTC
1. change system font size and/or resolution.
2. open new Calc spreadsheet
Look at the height of the row with the table names (just above the status bar). This height (and the font for the table names) do not adjust to the system font size and/or resolution

#36889 is essentially the same bug but very old. Nowadays we have bigger screens with larger resolutions, and then the tab bar, which is now independent from the scroll bar height, is very small if not adjusted to the system font.
Comment 1 Bernhard 2017-10-25 13:32:28 UTC
commit https://gerrit.libreoffice.org/#/c/43328/ fixes translating from pt to pixel, so the tab bar height adjusts to the dpi resolution of the system font

(there once was an option in LibreOffice to set the dpi independently from the system settings, but that option was removed before LO 5.2)
Comment 2 Bernhard 2017-10-25 13:40:14 UTC
commit https://gerrit.libreoffice.org/#/c/43605/ removes capping of the default font size, previously it was capped at (8*res_y/600+1.5) pt

attention: The cap removal affects all areas where the system font is used, not only the tab bar. This includes dialogs, widgets and row/col headings.
Comment 3 Commit Notification 2017-10-26 06:44:04 UTC
Bernhard Widl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb151051d79a7ec176e769a33a56e7d906fc1425

tdf#113444 removed capping of default font size

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.