tdf#113444 removed capping of default font size

Change-Id: Ic2ef7eeea7dd9306b57d55952ab716d6255f9576
Reviewed-on: https://gerrit.libreoffice.org/43605
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit cb151051d79a7ec176e769a33a56e7d906fc1425)
(cherry picked from commit 606393be5fdbded38d986db60cdba6f0353f22ef)